fix: system scrollbar color

--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -3,10 +3,12 @@
 @import 'theme-preset';
 
 @include theme-light {
+  color-scheme: light;
   @include light-mode;
 }
 
 @include theme-dark {
+  color-scheme: dark;
   @include dark-mode;
 }
 
@@ -26,7 +28,7 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue',
-    Helvetica, 'Ubuntu', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
+    Helvetica, Ubuntu, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
     'WenQuanYi Micro Hei', sans-serif;
   font-size: 14px;
   font-weight: 400;
